Erase pattern signature for deconstructors (implicit or explicit) (#19)
* Erase pattern signature for records

* Erase pattern signature for deconstructors